# myspice

./: .gitignore  CMakeLists.txt  doxygen.conf  myspice.code-workspace  myspice.dox
sprawozdanie/: sprawozdanie.tex
src/: circuit.cpp  circuit.hpp  extended.cpp  extended.hpp  legacy.cpp  legacy.hpp  matrix.hpp  mna.cpp  mna.hpp  myspice.cpp
